add last line (text)

--- a/3_metrics.ipynb
+++ b/3_metrics.ipynb
@@ -883,10 +883,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "6aZhCsABzpUg"
    },
+   "outputs": [],
+   "source": [
+    "#test message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
